// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Message /> can take react node as icon prop 1`] = `
<body>
  <div>
    <div
      class="cds--white cds--layer-one"
    >
      <div
        class="pal--message"
      >
        <svg
          class="pal--message__icon"
          height="110"
          id="node-icon"
          width="400"
        >
          <rect
            height="100"
            width="300"
          />
        </svg>
        <div
          class="pal--message__text-container"
        >
          <div
            aria-level="2"
            class="pal--message__text"
            role="heading"
          >
            This is a custom icon
          </div>
          <div
            class="pal--message__caption"
          >
            Deal with it
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`<Message /> can take react node as icon that gets larger 1`] = `
<body>
  <div>
    <div
      class="cds--white cds--layer-one"
    >
      <div
        class="pal--message pal--message--large"
      >
        <svg
          class="pal--message__icon pal--message__icon--large"
          height="110"
          id="node-icon"
          width="400"
        >
          <rect
            height="100"
            width="300"
          />
        </svg>
        <div
          class="pal--message__text-container"
        >
          <div
            aria-level="2"
            class="pal--message__text pal--message__text--large"
            role="heading"
          >
            This is custom large icon
          </div>
          <div
            class="pal--message__caption pal--message__caption--large"
          >
            Deal with it
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`<Message /> can take react nodes as props 1`] = `
<body>
  <div>
    <div
      class="cds--white cds--layer-one"
    >
      <div
        class="pal--message"
      >
        <svg
          class="pal--isometric-icon pal--message__icon"
          viewBox="0 0 80 80"
          xmlns="http://www.w3.org/2000/svg"
          xmlns:xlink="http://www.w3.org/1999/xlink"
        >
          <defs>
            <lineargradient
              gradientUnits="userSpaceOnUse"
              id="icon--unauthorized--linear-gradient-2--unauthorized-message-2"
              x1="27.98"
              x2="53.65"
              y1="73.72"
              y2="58.9"
            >
              <stop
                offset="0"
                stop-color="#525252"
                stop-opacity=".05"
              />
              <stop
                offset="1"
                stop-opacity=".1"
              />
            </lineargradient>
            <lineargradient
              gradientUnits="userSpaceOnUse"
              id="icon--unauthorized--linear-gradient-3--unauthorized-message-2"
              x1="17.33"
              x2="53.57"
              y1="40.68"
              y2="19.76"
            >
              <stop
                offset="0"
                stop-color="#f4f4f4"
              />
              <stop
                offset=".78"
                stop-color="#e0e0e0"
              />
              <stop
                offset="1"
                stop-color="#c6c6c6"
              />
            </lineargradient>
            <lineargradient
              gradientUnits="userSpaceOnUse"
              id="icon--unauthorized--linear-gradient-4--unauthorized-message-2"
              x1="28.59"
              x2="58.88"
              y1="16.01"
              y2="68.47"
            >
              <stop
                offset="0"
                stop-color="#f4f4f4"
              />
              <stop
                offset=".11"
                stop-color="#e0e0e0"
              />
              <stop
                offset=".25"
                stop-color="#d8d8d8"
              />
              <stop
                offset=".44"
                stop-color="#c6c6c6"
              />
              <stop
                offset=".53"
                stop-color="#ababab"
              />
              <stop
                offset=".93"
                stop-color="#a8a8a8"
              />
              <stop
                offset="1"
                stop-color="#8d8d8d"
              />
            </lineargradient>
            <lineargradient
              gradientUnits="userSpaceOnUse"
              id="icon--unauthorized--linear-gradient--unauthorized-message-2"
              x1="26.93"
              x2="61.39"
              y1="50.69"
              y2="50.69"
            >
              <stop
                offset="0"
                stop-color="#a8a8a8"
              />
              <stop
                offset="1"
                stop-color="#c6c6c6"
              />
            </lineargradient>
            <lineargradient
              id="icon--unauthorized--linear-gradient-5--unauthorized-message-2"
              x1="39.97"
              x2="39.97"
              xlink:href="#icon--unauthorized--linear-gradient--unauthorized-message-2"
              y1="32.38"
              y2="1.64"
            />
            <lineargradient
              gradientUnits="userSpaceOnUse"
              id="icon--unauthorized--linear-gradient-6--unauthorized-message-2"
              x1="24.59"
              x2="51.62"
              y1="44.68"
              y2="44.68"
            >
              <stop
                offset="0"
                stop-color="#e0e0e0"
              />
              <stop
                offset="1"
                stop-color="#c6c6c6"
              />
            </lineargradient>
            <lineargradient
              gradientUnits="userSpaceOnUse"
              id="icon--unauthorized--linear-gradient-7--unauthorized-message-2"
              x1="32.72"
              x2="38.82"
              y1="45.46"
              y2="41.94"
            >
              <stop
                offset="0"
                stop-color="#a8a8a8"
              />
              <stop
                offset="1"
                stop-color="#8d8d8d"
              />
            </lineargradient>
            <lineargradient
              gradientUnits="userSpaceOnUse"
              id="icon--unauthorized--linear-gradient-8--unauthorized-message-2"
              x1="20.61"
              x2="52.7"
              y1="20.85"
              y2="39.38"
            >
              <stop
                offset=".67"
                stop-color="#fff"
              />
              <stop
                offset=".76"
                stop-color="#fff"
                stop-opacity=".99"
              />
              <stop
                offset=".8"
                stop-color="#fdfdfd"
                stop-opacity=".96"
              />
              <stop
                offset=".84"
                stop-color="#fbfbfb"
                stop-opacity=".91"
              />
              <stop
                offset=".87"
                stop-color="#f7f7f7"
                stop-opacity=".83"
              />
              <stop
                offset=".9"
                stop-color="#f3f3f3"
                stop-opacity=".74"
              />
              <stop
                offset=".92"
                stop-color="#ededed"
                stop-opacity=".62"
              />
              <stop
                offset=".94"
                stop-color="#e6e6e6"
                stop-opacity=".48"
              />
              <stop
                offset=".97"
                stop-color="#dfdfdf"
                stop-opacity=".31"
              />
              <stop
                offset=".99"
                stop-color="#d6d6d6"
                stop-opacity=".13"
              />
              <stop
                offset="1"
                stop-color="#d0d0d0"
                stop-opacity="0"
              />
            </lineargradient>
          </defs>
          <path
            d="M20.28 60.39l10.27-5.94 30.8 17.79-10.26 5.93-30.81-17.78z"
            fill="url(#icon--unauthorized--linear-gradient-2--unauthorized-message-2)"
          />
          <path
            d="M61.16 32.9a1.46 1.46 0 00-.5-.5l-1.1-.64L31.07 15.3a.52.52 0 00-.49-.06l-10.1 5.83c-.12.07 2.15 28.77 2.15 28.77l4.3 2.79L61.25 33.1a1.78 1.78 0 00-.1-.2z"
            fill="url(#icon--unauthorized--linear-gradient-3--unauthorized-message-2)"
          />
          <path
            d="M61.16 62.45a.5.5 0 00.23-.48V33.64a1.36 1.36 0 00-.13-.54L26.93 52.64l24.12 15.64z"
            fill="url(#icon--unauthorized--linear-gradient-4--unauthorized-message-2)"
          />
          <path
            d="M61.16 62.45a.5.5 0 00.23-.48V33.64a1.36 1.36 0 00-.13-.54L26.93 52.64l24.12 15.64z"
            fill="url(#icon--unauthorized--linear-gradient--unauthorized-message-2)"
          />
          <path
            d="M46.88 31.4a.85.85 0 00.5.7 2.65 2.65 0 002.4 0 .84.84 0 00.5-.7V18.27c0-5.39-4.15-12-9.46-15.07-3.04-1.76-6.04-2.04-8.22-.78-1.9 1.1-2.95 3.19-2.95 5.9V21.5a.84.84 0 00.5.7 2.66 2.66 0 002.4 0 .84.84 0 00.5-.7V8.31a3.28 3.28 0 011.25-2.95c1.08-.62 2.88-.33 4.82.78 4.2 2.44 7.76 7.99 7.76 12.13z"
            fill="url(#icon--unauthorized--linear-gradient-5--unauthorized-message-2)"
          />
          <path
            d="M50.56 38.22l-1.1-.63-28.49-16.45a.52.52 0 00-.49-.06.5.5 0 00-.23.48v28.33a1.49 1.49 0 00.23.74 1.46 1.46 0 00.5.5L49.45 67.6l1.1.63a.52.52 0 00.5.06.5.5 0 00.22-.47V39.47a1.5 1.5 0 00-.23-.74 1.46 1.46 0 00-.49-.5z"
            fill="url(#icon--unauthorized--linear-gradient-6--unauthorized-message-2)"
          />
          <path
            d="M38.02 41.63a4.98 4.98 0 00-2.25-3.9c-1.25-.71-2.26-.13-2.26 1.3a4.76 4.76 0 00.84 2.5l-.84 5.3 4.5 2.6-.83-6.26a1.48 1.48 0 00.84-1.54z"
            fill="url(#icon--unauthorized--linear-gradient-7--unauthorized-message-2)"
          />
          <path
            d="M51.4 38.51a1.88 1.88 0 00-.63-.65l-1.1-.63-28.49-16.45a1.04 1.04 0 00-.1-.05l-.6.35a.38.38 0 01.17-.04.65.65 0 01.33.1l28.48 16.45 1.1.63a1.46 1.46 0 01.5.5l.06.15.37-.2-.08-.16z"
            fill="url(#icon--unauthorized--linear-gradient-8--unauthorized-message-2)"
          />
        </svg>
        <div
          class="pal--message__text-container"
        >
          <div
            class="pal--message__text"
          >
            Something went wrong. 
            <strong>
              Try reloading the page
            </strong>
             to see this information.
          </div>
          <div
            class="pal--message__caption"
          >
            Error code
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`<Message /> does not render icon when the icon string is invalid 1`] = `
<body>
  <div>
    <div
      class="cds--white cds--layer-one"
    >
      <div
        class="pal--message"
      >
        <div
          class="pal--message__text-container"
        >
          <div
            aria-level="2"
            class="pal--message__text"
            role="heading"
          >
            This is empty
          </div>
          <div
            class="pal--message__caption"
          >
            Deal with it
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`<Message /> renders large icon the large prop 1`] = `
<body>
  <div>
    <div
      class="cds--white cds--layer-one"
    >
      <div
        class="pal--message pal--message--large"
      >
        <svg
          class="pal--isometric-icon pal--message__icon pal--message__icon--large"
          viewBox="0 0 80 80"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs>
            <lineargradient
              gradientUnits="userSpaceOnUse"
              id="icon--empty--linear-gradient--empty-message-4"
              x1="18.35"
              x2="61.65"
              y1="74.17"
              y2="49.17"
            >
              <stop
                offset="0"
                stop-color="#525252"
                stop-opacity=".05"
              />
              <stop
                offset="1"
                stop-opacity=".1"
              />
            </lineargradient>
            <lineargradient
              gradientUnits="userSpaceOnUse"
              id="icon--empty--linear-gradient-2--empty-message-4"
              x1="15.16"
              x2="40.31"
              y1="43.34"
              y2="43.34"
            >
              <stop
                offset="0"
                stop-color="#e0e0e0"
              />
              <stop
                offset="1"
                stop-color="#c6c6c6"
              />
            </lineargradient>
            <lineargradient
              gradientUnits="userSpaceOnUse"
              id="icon--empty--linear-gradient-3--empty-message-4"
              x1="40"
              x2="68.88"
              y1="43.34"
              y2="43.34"
            >
              <stop
                offset="0"
                stop-color="#a8a8a8"
              />
              <stop
                offset="1"
                stop-color="#c6c6c6"
              />
            </lineargradient>
            <lineargradient
              gradientUnits="userSpaceOnUse"
              id="icon--empty--linear-gradient-4--empty-message-4"
              x1="18.35"
              x2="61.65"
              y1="30.83"
              y2="5.83"
            >
              <stop
                offset="0"
                stop-color="#f4f4f4"
              />
              <stop
                offset="1"
                stop-color="#e0e0e0"
              />
            </lineargradient>
          </defs>
          <path
            d="M40 78.34L11.13 61.67 40 45.01l28.86 16.66L40 78.34z"
            fill="url(#icon--empty--linear-gradient--empty-message-4)"
          />
          <path
            d="M40 68.35L11.12 51.68l.01-33.35L40 34.99v33.36z"
            fill="url(#icon--empty--linear-gradient-2--empty-message-4)"
          />
          <path
            d="M68.88 51.68L40 68.35V35l28.87-16.67v33.35z"
            fill="url(#icon--empty--linear-gradient-3--empty-message-4)"
          />
          <path
            d="M40 35L11.13 18.32 40 1.66l28.87 16.67L40 34.99z"
            fill="url(#icon--empty--linear-gradient-4--empty-message-4)"
          />
          <path
            d="M25.97 26.67l28.67-16.55-.42-.24-28.68 16.56.43.23z"
            fill="#c6c6c6"
          />
          <path
            d="M40 35.24L11.13 18.57v-.24l.21-.12 28.87 16.66L40 35v.24zM21.5 33.33l-8.2-4.73v-5.69l8.2 4.74v5.68z"
            fill="#fff"
          />
        </svg>
        <div
          class="pal--message__text-container"
        >
          <div
            aria-level="2"
            class="pal--message__text pal--message__text--large"
            role="heading"
          >
            This is empty
          </div>
          <div
            class="pal--message__caption pal--message__caption--large"
          >
            Deal with it
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`<Message /> renders the empty variant as expected 1`] = `
<body>
  <div>
    <div
      class="cds--white cds--layer-one"
    >
      <div
        class="pal--message"
      >
        <svg
          class="pal--isometric-icon pal--message__icon"
          viewBox="0 0 80 80"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs>
            <lineargradient
              gradientUnits="userSpaceOnUse"
              id="icon--empty--linear-gradient--empty-message"
              x1="18.35"
              x2="61.65"
              y1="74.17"
              y2="49.17"
            >
              <stop
                offset="0"
                stop-color="#525252"
                stop-opacity=".05"
              />
              <stop
                offset="1"
                stop-opacity=".1"
              />
            </lineargradient>
            <lineargradient
              gradientUnits="userSpaceOnUse"
              id="icon--empty--linear-gradient-2--empty-message"
              x1="15.16"
              x2="40.31"
              y1="43.34"
              y2="43.34"
            >
              <stop
                offset="0"
                stop-color="#e0e0e0"
              />
              <stop
                offset="1"
                stop-color="#c6c6c6"
              />
            </lineargradient>
            <lineargradient
              gradientUnits="userSpaceOnUse"
              id="icon--empty--linear-gradient-3--empty-message"
              x1="40"
              x2="68.88"
              y1="43.34"
              y2="43.34"
            >
              <stop
                offset="0"
                stop-color="#a8a8a8"
              />
              <stop
                offset="1"
                stop-color="#c6c6c6"
              />
            </lineargradient>
            <lineargradient
              gradientUnits="userSpaceOnUse"
              id="icon--empty--linear-gradient-4--empty-message"
              x1="18.35"
              x2="61.65"
              y1="30.83"
              y2="5.83"
            >
              <stop
                offset="0"
                stop-color="#f4f4f4"
              />
              <stop
                offset="1"
                stop-color="#e0e0e0"
              />
            </lineargradient>
          </defs>
          <path
            d="M40 78.34L11.13 61.67 40 45.01l28.86 16.66L40 78.34z"
            fill="url(#icon--empty--linear-gradient--empty-message)"
          />
          <path
            d="M40 68.35L11.12 51.68l.01-33.35L40 34.99v33.36z"
            fill="url(#icon--empty--linear-gradient-2--empty-message)"
          />
          <path
            d="M68.88 51.68L40 68.35V35l28.87-16.67v33.35z"
            fill="url(#icon--empty--linear-gradient-3--empty-message)"
          />
          <path
            d="M40 35L11.13 18.32 40 1.66l28.87 16.67L40 34.99z"
            fill="url(#icon--empty--linear-gradient-4--empty-message)"
          />
          <path
            d="M25.97 26.67l28.67-16.55-.42-.24-28.68 16.56.43.23z"
            fill="#c6c6c6"
          />
          <path
            d="M40 35.24L11.13 18.57v-.24l.21-.12 28.87 16.66L40 35v.24zM21.5 33.33l-8.2-4.73v-5.69l8.2 4.74v5.68z"
            fill="#fff"
          />
        </svg>
        <div
          class="pal--message__text-container"
        >
          <div
            aria-level="2"
            class="pal--message__text"
            role="heading"
          >
            This is empty
          </div>
          <div
            class="pal--message__caption"
          >
            Deal with it
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`<Message /> renders the error variant as expected 1`] = `
<body>
  <div>
    <div
      class="cds--white cds--layer-one"
    >
      <div
        class="pal--message"
      >
        <svg
          class="pal--isometric-icon pal--message__icon"
          viewBox="0 0 80 80"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs>
            <lineargradient
              gradientUnits="userSpaceOnUse"
              id="icon--error--linear-gradient--error-message"
              x1="29.96"
              x2="53.15"
              y1="45.68"
              y2="85.84"
            >
              <stop
                offset="0"
                stop-color="#525252"
                stop-opacity=".05"
              />
              <stop
                offset="1"
                stop-opacity=".1"
              />
            </lineargradient>
            <lineargradient
              gradientUnits="userSpaceOnUse"
              id="icon--error--linear-gradient-2--error-message"
              x1="38.91"
              x2="38.91"
              y1="52.59"
              y2="3.3"
            >
              <stop
                offset="0"
                stop-color="#c6c6c6"
              />
              <stop
                offset=".78"
                stop-color="#e0e0e0"
              />
            </lineargradient>
            <lineargradient
              gradientUnits="userSpaceOnUse"
              id="icon--error--linear-gradient-3--error-message"
              x1="18.07"
              x2="71.64"
              y1="14.06"
              y2="44.99"
            >
              <stop
                offset="0"
                stop-color="#e0e0e0"
              />
              <stop
                offset=".13"
                stop-color="#f4f4f4"
              />
              <stop
                offset=".56"
                stop-color="#e0e0e0"
              />
              <stop
                offset=".62"
                stop-color="#d8d8d8"
              />
              <stop
                offset=".7"
                stop-color="#c6c6c6"
              />
              <stop
                offset=".89"
                stop-color="#a8a8a8"
              />
              <stop
                offset="1"
                stop-color="#8d8d8d"
              />
            </lineargradient>
            <lineargradient
              gradientUnits="userSpaceOnUse"
              id="icon--error--linear-gradient-4--error-message"
              x1="27.94"
              x2="49.87"
              y1="51.19"
              y2="13.21"
            >
              <stop
                offset=".54"
                stop-color="#d0d0d0"
                stop-opacity="0"
              />
              <stop
                offset=".82"
                stop-color="#f1f1f1"
                stop-opacity=".7"
              />
              <stop
                offset=".94"
                stop-color="#fff"
              />
            </lineargradient>
            <lineargradient
              gradientUnits="userSpaceOnUse"
              id="icon--error--linear-gradient-5--error-message"
              x1="28.66"
              x2="47.15"
              y1="26.33"
              y2="37"
            >
              <stop
                offset="0"
                stop-color="#fff"
              />
              <stop
                offset=".05"
                stop-color="#fdfdfd"
              />
              <stop
                offset=".3"
                stop-color="#f6f6f6"
              />
              <stop
                offset="1"
                stop-color="#f4f4f4"
              />
            </lineargradient>
          </defs>
          <path
            d="M59.91 78.34l-43-24.83 4.86-2.8 43 24.82-4.86 2.8z"
            fill="url(#icon--error--linear-gradient--error-message)"
          />
          <path
            d="M38.98 6.92C51.13 13.94 60.94 30.94 60.9 44.9s-9.92 19.6-22.07 12.58S16.87 33.46 16.91 19.5 26.83-.1 38.98 6.92z"
            fill="url(#icon--error--linear-gradient-2--error-message)"
          />
          <path
            d="M42.85 4.68C36.74 1.15 31.2.82 27.2 3.15l-3.66 2.13c3.98-2.2 9.43-1.83 15.44 1.64C51.13 13.94 60.94 30.94 60.9 44.9c-.02 6.76-2.35 11.57-6.13 13.93l-.07.05c-.32.2 3.66-2.1 3.66-2.1 3.95-2.3 6.4-7.19 6.41-14.12C64.81 28.7 55 11.69 42.85 4.68z"
            fill="url(#icon--error--linear-gradient-3--error-message)"
          />
          <path
            d="M29.11 3.9v.37a19.58 19.58 0 019.68 2.97c12.03 6.94 21.78 23.84 21.74 37.65-.02 9.4-4.56 15.23-11.83 15.23a19.59 19.59 0 01-9.68-2.96C26.99 50.22 17.24 33.32 17.28 19.5c.02-9.39 4.56-15.22 11.83-15.22V3.9m0 0c-7.2 0-12.17 5.7-12.2 15.59-.04 13.96 9.77 30.97 21.92 37.98a20.03 20.03 0 009.87 3.01c7.2 0 12.17-5.7 12.2-15.6.04-13.95-9.77-30.96-21.92-37.97A20.03 20.03 0 0029.1 3.9z"
            fill="url(#icon--error--linear-gradient-4--error-message)"
          />
          <path
            d="M38.93 49.8a6.84 6.84 0 01-2.66-2.52 6.07 6.07 0 01-.81-3v-.98a2.25 2.25 0 01.81-2.05q.81-.52 2.66.55a6.72 6.72 0 012.6 2.5 6.04 6.04 0 01.82 2.98v.99a2.25 2.25 0 01-.82 2.05c-.54.34-1.4.17-2.6-.53zm-1.16-11.64l-1.75-15.39v-9.73l5.81 3.36v9.73l-1.66 13.42z"
            fill="url(#icon--error--linear-gradient-5--error-message)"
          />
        </svg>
        <div
          class="pal--message__text-container"
        >
          <div
            aria-level="2"
            class="pal--message__text"
            role="heading"
          >
            Something went wrong
          </div>
          <div
            class="pal--message__caption"
          >
            Error code
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`<Message /> renders the message in a tile with tileWrapped prop 1`] = `
<body>
  <div>
    <div
      class="cds--white cds--layer-one"
    >
      <div
        class="pal--message pal--message--tile"
      >
        <svg
          class="pal--isometric-icon pal--message__icon"
          viewBox="0 0 80 80"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs>
            <lineargradient
              gradientUnits="userSpaceOnUse"
              id="icon--empty--linear-gradient--empty-message-3"
              x1="18.35"
              x2="61.65"
              y1="74.17"
              y2="49.17"
            >
              <stop
                offset="0"
                stop-color="#525252"
                stop-opacity=".05"
              />
              <stop
                offset="1"
                stop-opacity=".1"
              />
            </lineargradient>
            <lineargradient
              gradientUnits="userSpaceOnUse"
              id="icon--empty--linear-gradient-2--empty-message-3"
              x1="15.16"
              x2="40.31"
              y1="43.34"
              y2="43.34"
            >
              <stop
                offset="0"
                stop-color="#e0e0e0"
              />
              <stop
                offset="1"
                stop-color="#c6c6c6"
              />
            </lineargradient>
            <lineargradient
              gradientUnits="userSpaceOnUse"
              id="icon--empty--linear-gradient-3--empty-message-3"
              x1="40"
              x2="68.88"
              y1="43.34"
              y2="43.34"
            >
              <stop
                offset="0"
                stop-color="#a8a8a8"
              />
              <stop
                offset="1"
                stop-color="#c6c6c6"
              />
            </lineargradient>
            <lineargradient
              gradientUnits="userSpaceOnUse"
              id="icon--empty--linear-gradient-4--empty-message-3"
              x1="18.35"
              x2="61.65"
              y1="30.83"
              y2="5.83"
            >
              <stop
                offset="0"
                stop-color="#f4f4f4"
              />
              <stop
                offset="1"
                stop-color="#e0e0e0"
              />
            </lineargradient>
          </defs>
          <path
            d="M40 78.34L11.13 61.67 40 45.01l28.86 16.66L40 78.34z"
            fill="url(#icon--empty--linear-gradient--empty-message-3)"
          />
          <path
            d="M40 68.35L11.12 51.68l.01-33.35L40 34.99v33.36z"
            fill="url(#icon--empty--linear-gradient-2--empty-message-3)"
          />
          <path
            d="M68.88 51.68L40 68.35V35l28.87-16.67v33.35z"
            fill="url(#icon--empty--linear-gradient-3--empty-message-3)"
          />
          <path
            d="M40 35L11.13 18.32 40 1.66l28.87 16.67L40 34.99z"
            fill="url(#icon--empty--linear-gradient-4--empty-message-3)"
          />
          <path
            d="M25.97 26.67l28.67-16.55-.42-.24-28.68 16.56.43.23z"
            fill="#c6c6c6"
          />
          <path
            d="M40 35.24L11.13 18.57v-.24l.21-.12 28.87 16.66L40 35v.24zM21.5 33.33l-8.2-4.73v-5.69l8.2 4.74v5.68z"
            fill="#fff"
          />
        </svg>
        <div
          class="pal--message__text-container"
        >
          <div
            aria-level="2"
            class="pal--message__text"
            role="heading"
          >
            This is empty
          </div>
          <div
            class="pal--message__caption"
          >
            Deal with it
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`<Message /> renders the unauthorized variant as expected 1`] = `
<body>
  <div>
    <div
      class="cds--white cds--layer-one"
    >
      <div
        class="pal--message"
      >
        <svg
          class="pal--isometric-icon pal--message__icon"
          viewBox="0 0 80 80"
          xmlns="http://www.w3.org/2000/svg"
          xmlns:xlink="http://www.w3.org/1999/xlink"
        >
          <defs>
            <lineargradient
              gradientUnits="userSpaceOnUse"
              id="icon--unauthorized--linear-gradient-2--unauthorized-message"
              x1="27.98"
              x2="53.65"
              y1="73.72"
              y2="58.9"
            >
              <stop
                offset="0"
                stop-color="#525252"
                stop-opacity=".05"
              />
              <stop
                offset="1"
                stop-opacity=".1"
              />
            </lineargradient>
            <lineargradient
              gradientUnits="userSpaceOnUse"
              id="icon--unauthorized--linear-gradient-3--unauthorized-message"
              x1="17.33"
              x2="53.57"
              y1="40.68"
              y2="19.76"
            >
              <stop
                offset="0"
                stop-color="#f4f4f4"
              />
              <stop
                offset=".78"
                stop-color="#e0e0e0"
              />
              <stop
                offset="1"
                stop-color="#c6c6c6"
              />
            </lineargradient>
            <lineargradient
              gradientUnits="userSpaceOnUse"
              id="icon--unauthorized--linear-gradient-4--unauthorized-message"
              x1="28.59"
              x2="58.88"
              y1="16.01"
              y2="68.47"
            >
              <stop
                offset="0"
                stop-color="#f4f4f4"
              />
              <stop
                offset=".11"
                stop-color="#e0e0e0"
              />
              <stop
                offset=".25"
                stop-color="#d8d8d8"
              />
              <stop
                offset=".44"
                stop-color="#c6c6c6"
              />
              <stop
                offset=".53"
                stop-color="#ababab"
              />
              <stop
                offset=".93"
                stop-color="#a8a8a8"
              />
              <stop
                offset="1"
                stop-color="#8d8d8d"
              />
            </lineargradient>
            <lineargradient
              gradientUnits="userSpaceOnUse"
              id="icon--unauthorized--linear-gradient--unauthorized-message"
              x1="26.93"
              x2="61.39"
              y1="50.69"
              y2="50.69"
            >
              <stop
                offset="0"
                stop-color="#a8a8a8"
              />
              <stop
                offset="1"
                stop-color="#c6c6c6"
              />
            </lineargradient>
            <lineargradient
              id="icon--unauthorized--linear-gradient-5--unauthorized-message"
              x1="39.97"
              x2="39.97"
              xlink:href="#icon--unauthorized--linear-gradient--unauthorized-message"
              y1="32.38"
              y2="1.64"
            />
            <lineargradient
              gradientUnits="userSpaceOnUse"
              id="icon--unauthorized--linear-gradient-6--unauthorized-message"
              x1="24.59"
              x2="51.62"
              y1="44.68"
              y2="44.68"
            >
              <stop
                offset="0"
                stop-color="#e0e0e0"
              />
              <stop
                offset="1"
                stop-color="#c6c6c6"
              />
            </lineargradient>
            <lineargradient
              gradientUnits="userSpaceOnUse"
              id="icon--unauthorized--linear-gradient-7--unauthorized-message"
              x1="32.72"
              x2="38.82"
              y1="45.46"
              y2="41.94"
            >
              <stop
                offset="0"
                stop-color="#a8a8a8"
              />
              <stop
                offset="1"
                stop-color="#8d8d8d"
              />
            </lineargradient>
            <lineargradient
              gradientUnits="userSpaceOnUse"
              id="icon--unauthorized--linear-gradient-8--unauthorized-message"
              x1="20.61"
              x2="52.7"
              y1="20.85"
              y2="39.38"
            >
              <stop
                offset=".67"
                stop-color="#fff"
              />
              <stop
                offset=".76"
                stop-color="#fff"
                stop-opacity=".99"
              />
              <stop
                offset=".8"
                stop-color="#fdfdfd"
                stop-opacity=".96"
              />
              <stop
                offset=".84"
                stop-color="#fbfbfb"
                stop-opacity=".91"
              />
              <stop
                offset=".87"
                stop-color="#f7f7f7"
                stop-opacity=".83"
              />
              <stop
                offset=".9"
                stop-color="#f3f3f3"
                stop-opacity=".74"
              />
              <stop
                offset=".92"
                stop-color="#ededed"
                stop-opacity=".62"
              />
              <stop
                offset=".94"
                stop-color="#e6e6e6"
                stop-opacity=".48"
              />
              <stop
                offset=".97"
                stop-color="#dfdfdf"
                stop-opacity=".31"
              />
              <stop
                offset=".99"
                stop-color="#d6d6d6"
                stop-opacity=".13"
              />
              <stop
                offset="1"
                stop-color="#d0d0d0"
                stop-opacity="0"
              />
            </lineargradient>
          </defs>
          <path
            d="M20.28 60.39l10.27-5.94 30.8 17.79-10.26 5.93-30.81-17.78z"
            fill="url(#icon--unauthorized--linear-gradient-2--unauthorized-message)"
          />
          <path
            d="M61.16 32.9a1.46 1.46 0 00-.5-.5l-1.1-.64L31.07 15.3a.52.52 0 00-.49-.06l-10.1 5.83c-.12.07 2.15 28.77 2.15 28.77l4.3 2.79L61.25 33.1a1.78 1.78 0 00-.1-.2z"
            fill="url(#icon--unauthorized--linear-gradient-3--unauthorized-message)"
          />
          <path
            d="M61.16 62.45a.5.5 0 00.23-.48V33.64a1.36 1.36 0 00-.13-.54L26.93 52.64l24.12 15.64z"
            fill="url(#icon--unauthorized--linear-gradient-4--unauthorized-message)"
          />
          <path
            d="M61.16 62.45a.5.5 0 00.23-.48V33.64a1.36 1.36 0 00-.13-.54L26.93 52.64l24.12 15.64z"
            fill="url(#icon--unauthorized--linear-gradient--unauthorized-message)"
          />
          <path
            d="M46.88 31.4a.85.85 0 00.5.7 2.65 2.65 0 002.4 0 .84.84 0 00.5-.7V18.27c0-5.39-4.15-12-9.46-15.07-3.04-1.76-6.04-2.04-8.22-.78-1.9 1.1-2.95 3.19-2.95 5.9V21.5a.84.84 0 00.5.7 2.66 2.66 0 002.4 0 .84.84 0 00.5-.7V8.31a3.28 3.28 0 011.25-2.95c1.08-.62 2.88-.33 4.82.78 4.2 2.44 7.76 7.99 7.76 12.13z"
            fill="url(#icon--unauthorized--linear-gradient-5--unauthorized-message)"
          />
          <path
            d="M50.56 38.22l-1.1-.63-28.49-16.45a.52.52 0 00-.49-.06.5.5 0 00-.23.48v28.33a1.49 1.49 0 00.23.74 1.46 1.46 0 00.5.5L49.45 67.6l1.1.63a.52.52 0 00.5.06.5.5 0 00.22-.47V39.47a1.5 1.5 0 00-.23-.74 1.46 1.46 0 00-.49-.5z"
            fill="url(#icon--unauthorized--linear-gradient-6--unauthorized-message)"
          />
          <path
            d="M38.02 41.63a4.98 4.98 0 00-2.25-3.9c-1.25-.71-2.26-.13-2.26 1.3a4.76 4.76 0 00.84 2.5l-.84 5.3 4.5 2.6-.83-6.26a1.48 1.48 0 00.84-1.54z"
            fill="url(#icon--unauthorized--linear-gradient-7--unauthorized-message)"
          />
          <path
            d="M51.4 38.51a1.88 1.88 0 00-.63-.65l-1.1-.63-28.49-16.45a1.04 1.04 0 00-.1-.05l-.6.35a.38.38 0 01.17-.04.65.65 0 01.33.1l28.48 16.45 1.1.63a1.46 1.46 0 01.5.5l.06.15.37-.2-.08-.16z"
            fill="url(#icon--unauthorized--linear-gradient-8--unauthorized-message)"
          />
        </svg>
        <div
          class="pal--message__text-container"
        >
          <div
            aria-level="2"
            class="pal--message__text"
            role="heading"
          >
            You do not have access
          </div>
          <div
            class="pal--message__caption"
          >
            Permission needed
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`<Message /> uses the empty icon as the default 1`] = `
<body>
  <div>
    <div
      class="cds--white cds--layer-one"
    >
      <div
        class="pal--message"
      >
        <svg
          class="pal--isometric-icon pal--message__icon"
          viewBox="0 0 80 80"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs>
            <lineargradient
              gradientUnits="userSpaceOnUse"
              id="icon--empty--linear-gradient--empty-message-2"
              x1="18.35"
              x2="61.65"
              y1="74.17"
              y2="49.17"
            >
              <stop
                offset="0"
                stop-color="#525252"
                stop-opacity=".05"
              />
              <stop
                offset="1"
                stop-opacity=".1"
              />
            </lineargradient>
            <lineargradient
              gradientUnits="userSpaceOnUse"
              id="icon--empty--linear-gradient-2--empty-message-2"
              x1="15.16"
              x2="40.31"
              y1="43.34"
              y2="43.34"
            >
              <stop
                offset="0"
                stop-color="#e0e0e0"
              />
              <stop
                offset="1"
                stop-color="#c6c6c6"
              />
            </lineargradient>
            <lineargradient
              gradientUnits="userSpaceOnUse"
              id="icon--empty--linear-gradient-3--empty-message-2"
              x1="40"
              x2="68.88"
              y1="43.34"
              y2="43.34"
            >
              <stop
                offset="0"
                stop-color="#a8a8a8"
              />
              <stop
                offset="1"
                stop-color="#c6c6c6"
              />
            </lineargradient>
            <lineargradient
              gradientUnits="userSpaceOnUse"
              id="icon--empty--linear-gradient-4--empty-message-2"
              x1="18.35"
              x2="61.65"
              y1="30.83"
              y2="5.83"
            >
              <stop
                offset="0"
                stop-color="#f4f4f4"
              />
              <stop
                offset="1"
                stop-color="#e0e0e0"
              />
            </lineargradient>
          </defs>
          <path
            d="M40 78.34L11.13 61.67 40 45.01l28.86 16.66L40 78.34z"
            fill="url(#icon--empty--linear-gradient--empty-message-2)"
          />
          <path
            d="M40 68.35L11.12 51.68l.01-33.35L40 34.99v33.36z"
            fill="url(#icon--empty--linear-gradient-2--empty-message-2)"
          />
          <path
            d="M68.88 51.68L40 68.35V35l28.87-16.67v33.35z"
            fill="url(#icon--empty--linear-gradient-3--empty-message-2)"
          />
          <path
            d="M40 35L11.13 18.32 40 1.66l28.87 16.67L40 34.99z"
            fill="url(#icon--empty--linear-gradient-4--empty-message-2)"
          />
          <path
            d="M25.97 26.67l28.67-16.55-.42-.24-28.68 16.56.43.23z"
            fill="#c6c6c6"
          />
          <path
            d="M40 35.24L11.13 18.57v-.24l.21-.12 28.87 16.66L40 35v.24zM21.5 33.33l-8.2-4.73v-5.69l8.2 4.74v5.68z"
            fill="#fff"
          />
        </svg>
        <div
          class="pal--message__text-container"
        >
          <div
            aria-level="2"
            class="pal--message__text"
            role="heading"
          >
            This is empty
          </div>
          <div
            class="pal--message__caption"
          >
            Deal with it
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
